backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-backend-deployment
spec:
  selector:
    matchLabels:
      app: testapp
      tier: backend
  replicas: 2
  # refers to the pod
  template:
    metadata:
      labels:
        app: testapp
        tier: backend
    spec:
      containers:
        - name: testapp-backend
          image: elvis089/testapp-express-backend:latest
          imagePullPolicy: "Always"
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 4040
