frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-frontend-deployment
spec:
  selector:
    matchLabels:
      app: my-app
      tier: frontend
  replicas: 2
  # refers to the pod
  template:
    metadata:
      labels:
        app: my-app
        tier: frontend
    spec:
      containers:
        - name: my-app-frontend
          image: elvis089/my-app
          imagePullPolicy: "Always"
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 3000
