frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-frontend-service
spec:
  selector:
    app: my-app
    tier: frontend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
